# Huffman

./: CMakeLists.txt  LICENSE  README.md
include/: BitReader.h  BitWriter.h  CLI.h  Huffman.h  HuffmanAlgo.h  HuffmanArchiver.h
src/: BitReader.cpp  BitWriter.cpp  CLI.cpp  Huffman.cpp  HuffmanAlgo.cpp  HuffmanArchiver.cpp  main.cpp
test/: TestBinStream.cpp  TestEndToEnd.cpp  TestPartsAlgo.cpp
